<?xml version="1.0" encoding="utf-8"?><!-- Copyright (C) 2016 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>
    <string name="app_name">News App</string>
    <string name="no_articles">No articles found</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="section_name">sectionName</string>
    <string name="section_Name">sectionName</string>
    <string name="sans_serif_medium">sans-serif-medium</string>
    <string name="settings_menu_item">Settings</string>
    <string name="settings_title">News settings</string>
    <string name="settings_section_name">news</string>
    <string name="settings_section_name_default">news</string>
    <string name="settings_section_name_label">Section</string>
    <string name="settings_article_type">article</string>
    <string name="settings_article_type_default">article</string>
    <string name="settings_article_type_label">Type</string>
    <string name="settings_page_size">page_size</string>
    <string name="settings_page_size_default">10</string>
    <string name="settings_page_size_label">Page size</string>
    <string name="settings_api_key">api_key</string>
    <string name="settings_api_key_default">test</string>
    <string name="settings_api_key_label">API key</string>
    <string name="no_settings_api_key">Enter API key in settings</string>
</resources>
